Remove network component
