# human_api/models/add_job_trusted_handlers_body.py
@@ -18,8 +18,7 @@ class AddJobTrustedHandlersBody(Model):
                  gas_payer: str = None,
                  gas_payer_private: str = None,
                  address: str = None,
-                 handlers: List[str] = None,
-                 network_id: int = 0):  # noqa: E501
+                 handlers: List[str] = None):  # noqa: E501
         """AddJobTrustedHandlersBody - a model defined in Swagger
 
         :param gas_payer: The gas_payer of this AddJobTrustedHandlersBody.  # noqa: E501
@@ -30,15 +29,12 @@ class AddJobTrustedHandlersBody(Model):
         :type address: str
         :param handlers: The handlers of this AddJobTrustedHandlersBody.  # noqa: E501
         :type handlers: List[str]
-        :param network_id: The network_id of this AddJobTrustedHandlersBody.  # noqa: E501
-        :type network_id: int
         """
         self.swagger_types = {
             'gas_payer': str,
             'gas_payer_private': str,
             'address': str,
             'handlers': List[str],
-            'network_id': int
         }
 
         self.attribute_map = {
@@ -46,13 +42,11 @@ class AddJobTrustedHandlersBody(Model):
             'gas_payer_private': 'gasPayerPrivate',
             'address': 'address',
             'handlers': 'handlers',
-            'network_id': 'networkId'
         }
         self._gas_payer = gas_payer
         self._gas_payer_private = gas_payer_private
         self._address = address
         self._handlers = handlers
-        self._network_id = network_id
 
     @classmethod
     def from_dict(cls, dikt) -> 'AddJobTrustedHandlersBody':
@@ -148,24 +142,3 @@ class AddJobTrustedHandlersBody(Model):
         """
 
         self._handlers = handlers
-
-    @property
-    def network_id(self) -> int:
-        """Gets the network_id of this AddJobTrustedHandlersBody.
-
-
-        :return: The network_id of this AddJobTrustedHandlersBody.
-        :rtype: int
-        """
-        return self._network_id
-
-    @network_id.setter
-    def network_id(self, network_id: int):
-        """Sets the network_id of this AddJobTrustedHandlersBody.
-
-
-        :param network_id: The network_id of this AddJobTrustedHandlersBody.
-        :type network_id: int
-        """
-
-        self._network_id = network_id
