# human_api/models/network_list_response_networks.py
@@ -1,82 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from human_api.models.base_model_ import Model
-from human_api import util
-
-
-class NetworkListResponseNetworks(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, network_name: str = None, network_id: int = None):  # noqa: E501
-        """NetworkListResponseNetworks - a model defined in Swagger
-
-        :param network_name: The network_name of this NetworkListResponseNetworks.  # noqa: E501
-        :type network_name: str
-        :param network_id: The network_id of this NetworkListResponseNetworks.  # noqa: E501
-        :type network_id: int
-        """
-        self.swagger_types = {'network_name': str, 'network_id': int}
-
-        self.attribute_map = {'network_name': 'network_name', 'network_id': 'networkId'}
-        self._network_name = network_name
-        self._network_id = network_id
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'NetworkListResponseNetworks':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The network_list_response_networks of this NetworkListResponseNetworks.  # noqa: E501
-        :rtype: NetworkListResponseNetworks
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def network_name(self) -> str:
-        """Gets the network_name of this NetworkListResponseNetworks.
-
-
-        :return: The network_name of this NetworkListResponseNetworks.
-        :rtype: str
-        """
-        return self._network_name
-
-    @network_name.setter
-    def network_name(self, network_name: str):
-        """Sets the network_name of this NetworkListResponseNetworks.
-
-
-        :param network_name: The network_name of this NetworkListResponseNetworks.
-        :type network_name: str
-        """
-
-        self._network_name = network_name
-
-    @property
-    def network_id(self) -> int:
-        """Gets the network_id of this NetworkListResponseNetworks.
-
-
-        :return: The network_id of this NetworkListResponseNetworks.
-        :rtype: int
-        """
-        return self._network_id
-
-    @network_id.setter
-    def network_id(self, network_id: int):
-        """Sets the network_id of this NetworkListResponseNetworks.
-
-
-        :param network_id: The network_id of this NetworkListResponseNetworks.
-        :type network_id: int
-        """
-
-        self._network_id = network_id
